--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -1,20 +1,72 @@
 $square: 150px;
 
-body > * {
-  box-sizing: border-box;
+body {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background-color: #eee;
+  > * {
+    box-sizing: border-box;
+  }
 }
 .container {
   width: $square*3;
+  height: 100vh;
   margin: 0 auto;
+  background-color: #fff;
+}
+header {
+  height: 35%;
+  background-color: #ddd;
+  display: grid;
+  grid-template-rows: 15% 40% 20% 25%;
+  grid-template-columns: 90%;
+  align-items: center;
+  justify-content: center;
+  h1 {
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    text-shadow: .2em .1em #aaa;
+    font-family: 'Times New Roman', Times, serif;
+  }
+  .player {
+    margin-bottom: .5em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    input {
+      width: 200px;
+    }
+  }
+  #confirm {
+    width: 100px;
+    margin-left: auto;
+    padding: .2em;
+    display: block;
+    font-weight: bold;
+  }
+  .reset {
+    width: 100px;
+    margin-left: auto;
+    padding: .2em;
+    font-weight: bold;
+  }
+  .info {
+    padding: .5em .5em;
+    font-variant: small-caps;
+    text-align: center;
+    background-color: #eee;
+  }
 }
 #board {
   width: 100%;
-  margin-top: 200px;
+  max-height: 65%;
+  padding-top: 20px;
   display: grid;
   grid-template-columns: repeat(3, $square);
   grid-template-rows: repeat(3, $square);
 }
 .square {
-  margin: 1px;
-  border: 1px solid black;
+  margin: 5px;
+  border: 2px solid #ccc;
+  border-radius: 10px;
 }
