add display element

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -51,7 +51,8 @@ header {
     font-weight: bold;
   }
   .info {
-    padding: .5em .5em;
+    padding: 1em .5em;
+    font-size: 13px;
     font-variant: small-caps;
     text-align: center;
     background-color: #eee;
