--- a/styles/main.css
+++ b/styles/main.css
@@ -52,7 +52,8 @@ header .reset {
   font-weight: bold;
 }
 header .info {
-  padding: 0.5em 0.5em;
+  padding: 1em 0.5em;
+  font-size: 13px;
   font-variant: small-caps;
   text-align: center;
   background-color: #eee;
