--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -70,4 +70,15 @@ header {
   margin: 5px;
   border: 2px solid #ccc;
   border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  span {
+    display: block;
+    font-size: 140px;
+  }
+}
+.alignment {
+  position: relative;
+  bottom: 10px;
 }
