--- a/styles/main.css
+++ b/styles/main.css
@@ -31,12 +31,32 @@ header h1 {
 }
 header .player {
   margin-bottom: 0.5em;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr 30px;
   align-items: center;
 }
-header .player input {
-  width: 200px;
+header .player input:first-of-type {
+  width: 150px;
+}
+header .player label:last-of-type {
+  flex-basis: auto;
+  font-size: 12px;
+  text-align: right;
+}
+header .player input:last-of-type {
+  margin-left: auto;
+  flex-basis: 30px;
+}
+header .player p:last-of-type {
+  margin-left: 20px;
+}
+header .player em {
+  position: relative;
+  left: 5px;
+  bottom: 3px;
+  font-size: 10px;
+  font-variant: small-caps;
+  color: grey;
 }
 header #confirm {
   width: 100px;
